--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "beyondcode/laravel-mailbox": "^4.0",
+        "ezyang/htmlpurifier": "^4.17",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "webklex/laravel-imap": "^4.1",
